hphp/hack/test/typecheck/coeffects/parameter_default.php.like_types.exp
File "parameter_default.php", line 5, characters 26-33:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "parameter_default.php", line 5, characters 19-22:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "parameter_default.php", line 3, characters 19-21:
  But the function being called requires the capability int
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
